# telemetry_system

./: .gitignore  README.md  telemetry_system.code-workspace
proto/: buf.yaml
proto/telemetry/v1/: telemetry.proto
scripts/: gen_certs.sh  local_setup.sh
sensor_node/: pyproject.toml
sensor_node/src/: __main__.py  crypto.py  pipeline.py  sensor.py  transport.py
telemetry_sink/: .env.example  pyproject.toml
telemetry_sink/src/: __main__.py  buffer.py  rate_limiter.py  server.py  telemetry_service.py
